存在bug 2，未修复

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,8 @@
                 "-g",
                 "${fileDirname}\\*.c",
                 "-o",
-                "${fileDirname}\\bin\\${fileBasenameNoExtension}.exe",
+                //"${fileDirname}\\bin\\${fileBasenameNoExtension}.exe",
+                "${fileDirname}\\bin\\main.exe",
                 "-fexec-charset=GBK",
             ],
             "options": {
