--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "name": "gcc.exe - 生成和调试活动文件",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${fileDirname}\\bin\\${fileBasenameNoExtension}.exe",
+            //"program": "${fileDirname}\\bin\\${fileBasenameNoExtension}.exe",
+            "program": "${fileDirname}\\bin\\main.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
